--- a/dashboard.html
+++ b/dashboard.html
@@ -25,44 +25,11 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
             <div class="container-fluid">
 
-                <!-- Brand -->
-                <a class="navbar-brand waves-effect" href="https://mdbootstrap.com/material-design-for-bootstrap/"
-                    target="_blank">
-                    <strong class="blue-text">MDB</strong>
-                </a>
-
-                <!-- Collapse -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
                 <!-- Links -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                    <!-- Left -->
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link waves-effect" href="#">Home
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link waves-effect" href="https://mdbootstrap.com/material-design-for-bootstrap/"
-                                target="_blank">About MDB</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link waves-effect" href="https://mdbootstrap.com/getting-started/" target="_blank">Free
-                                download</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link waves-effect" href="https://mdbootstrap.com/bootstrap-tutorial/" target="_blank">Free
-                                tutorials</a>
-                        </li>
-                    </ul>
-
                     <!-- Right -->
-                    <ul class="navbar-nav nav-flex-icons">
+                    <ul class="form-inline my-2 my-lg-0">
                         <li class="nav-item">
                             <a href="https://www.facebook.com/mdbootstrap" class="nav-link waves-effect" target="_blank">
                                 <i class="fa fa-facebook"></i>
@@ -90,9 +57,15 @@
         <!-- Sidebar -->
         <div class="sidebar-fixed position-fixed">
 
-            <a class="logo-wrapper waves-effect">
-                <img src="https://mdbootstrap.com/img/logo/mdb-email.png" class="img-fluid" alt="">
+            <a class="">
+                <img src="/img/logo/logo.PNG" class="img-fluid" width="300" height="300" alt="logo">
             </a>
+
+            <!-- Collapse -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
 
             <div class="list-group list-group-flush">
                 <a href="#" class="list-group-item active waves-effect">
