--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     
 </body>
-<script type="text/javascript" src="./script.js"></script>
+    <script src="data.json">
+        data = JSON.parse("data.json")
+    </script>
+    
+    <script type="text/javascript" src="./script.js"></script>
 </html>
