--- a/dashboard.html
+++ b/dashboard.html
@@ -87,7 +87,7 @@
                 <!--Card content-->
                 <div class="card-body">
 
-                    <div class="row">
+                    <div class="row" id="container">
 
                          <!--Card 1-->
                     <div class="card ml-4 mb-4">
