Modificacion data.json

--- a/dashboard.html
+++ b/dashboard.html
@@ -233,5 +233,8 @@
     </script>
 
 </body>
+<script src="data.json">
+    data = JSON.parse("data.json")
+</script>
 <script type="text/javascript" src="./script.js"></script>
 </html>
