--- a/prevenciontabaco.html
+++ b/prevenciontabaco.html
@@ -58,14 +58,14 @@
             </a>
 
             <div class="list-group list-group-flush">
-                <a href="dashboard.html" class="list-group-item active waves-effect">
+                <a href="dashboard.html" class="list-group-item list-group-item-action waves-effect">
                     <i class="fa fa-pie-chart mr-4"></i>Inicio
                 </a>
                 <a href="actividad_fisica.html" class="list-group-item list-group-item-action waves-effect">
-                    <i class="fa fa-child mr-4"></i>Actividad física</a>
+                    <i class="fa fa-user mr-4"></i>Actividad física</a>
                 <a href="nutricionyalimentacion.html" class="list-group-item list-group-item-action waves-effect">
-                    <i class="fa fa-utensils mr-4"></i>Nutrición y alimentación saludable</a>
-                <a href="prevenciontabaco.html" class="list-group-item list-group-item-action waves-effect">
+                    <i class="fa fa-table mr-4"></i>Nutrición y alimentación saludable</a>
+                <a href="prevenciontabaco.html" class="list-group-item active waves-effect">
                     <i class="fa fa-map mr-4"></i>Prevención consumo de tabaco</a>
                 <a href="pesosaludable.html" class="list-group-item list-group-item-action waves-effect">
                     <i class="fa fa-money mr-4"></i>Peso saludable</a>
