--- a/dashboard.html
+++ b/dashboard.html
@@ -128,8 +128,8 @@
     </script>
 
 </body>
-<script src="data.json">
-    data = JSON.parse("data.json")
+<script src="estilosv.json">
+    estilosv = JSON.parse("estilosv.json")
 </script>
 <script type="text/javascript" src="./script.js"></script>
 </html>
