--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     
 </body>
-    <script src="data.json">
-        data = JSON.parse("data.json")
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <a href=""></a>
     
-    <script type="text/javascript" src="./script.js"></script>
+    <script type="text/javascript" src="script.js"> charset="utf-8"</script>
 </html>
