--- a/dashboard.html
+++ b/dashboard.html
@@ -131,5 +131,5 @@
 <script src="estilosv.json">
     estilosv = JSON.parse("estilosv.json")
 </script>
-<script type="text/javascript" src="./script.js"></script>
+<script type="text/javascript" src="./frontend.js"></script>
 </html>
