--- a/dashboard.html
+++ b/dashboard.html
@@ -14,6 +14,7 @@
     <link href="css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="grey lighten-3">
@@ -59,20 +60,20 @@
 
             <div class="list-group list-group-flush">
                 <a href="dashboard.html" class="list-group-item active waves-effect">
-                    <i class="fa fa-pie-chart mr-4"></i>Inicio
+                    <i class="fa fa-home mr-4"></i>Inicio
                 </a>
                 <a href="actividad_fisica.html" class="list-group-item list-group-item-action waves-effect">
-                    <i class="fa fa-child mr-4"></i>Actividad física</a>
+                    <i class="mr-3"> <img src="./img/estilosV/btn-actividad-fisica.png" alt="" width="30" height="30"></i>Actividad física</a>
                 <a href="nutricionyalimentacion.html" class="list-group-item list-group-item-action waves-effect">
-                    <i class="fa fa-utensils mr-4"></i>Nutrición y alimentación saludable</a>
+                    <i class="mr-3"> <img src="./img/estilosV/btn-salud-nutricional.png" alt="" width="30" height="30"></i>Nutrición y alimentación saludable</a>
                 <a href="prevenciontabaco.html" class="list-group-item list-group-item-action waves-effect">
-                    <i class="fa fa-map mr-4"></i>Prevención consumo de tabaco</a>
+                    <i class="mr-3"> <img src="./img/estilosV/btn-prevencion-tabaco.png" alt="" width="30" height="30"></i>Prevención consumo de tabaco</a>
                 <a href="pesosaludable.html" class="list-group-item list-group-item-action waves-effect">
-                    <i class="fa fa-money mr-4"></i>Peso saludable</a>
+                    <i class="mr-3"> <img src="./img/estilosV/btn-peso-saludable.png" alt="" width="30" height="30"></i>Peso saludable</a>
                 <a href="lavadomanos.html" class="list-group-item list-group-item-action waves-effect">
-                    <i class="fa fa-money mr-4"></i>Lavado de manos</a>
+                    <i class="mr-3"> <img src="./img/estilosV/btn-lavado-manos.png" alt="" width="30" height="30"></i>Higiene</a>
                 <a href="saludbucal.html" class="list-group-item list-group-item-action waves-effect">
-                    <i class="fa fa-money mr-4"></i>Salud bucal, visual y auditiva</a>    
+                    <i class="mr-3"> <img src="./img/estilosV/btn-salud-bucal.png" alt="" width="30" height="30"></i>Salud bucal, visual y auditiva</a>    
             </div>
 
         </div>
