Ultimos cambios frontend jhonatan

--- a/saludbucal.html
+++ b/saludbucal.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Material Design Bootstrap</title>
+    <title>Salud bucal, visual y auditiva</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
@@ -128,8 +128,4 @@
     </script>
 
 </body>
-<script src="estilosv.json">
-    estilosv = JSON.parse("estilosv.json")
-</script>
-<script type="text/javascript" src="./frontend.js"></script>
 </html>
