--- a/actividad_fisica.html
+++ b/actividad_fisica.html
@@ -138,7 +138,7 @@
     <!--Main layout-->
 
     <!--Footer-->
-    <footer class="page-footer text-center font-small primary-color-dark darken-2 mt-4">
+    <footer class="fixed fixed-bottom page-footer text-center font-small primary-color-dark darken-2 mt-4">
 
         <!--Copyright-->
         <div class="footer-copyright py-3">
