--- a/dashboard.html
+++ b/dashboard.html
@@ -54,8 +54,8 @@
         <!-- Sidebar -->
         <div class="sidebar-fixed position-fixed">
 
-            <a class="">
-                <img src="/img/logo/logo.PNG" class="img-fluid" width="300" height="300" alt="logo">
+            <a>
+                <img src="/img/logo/logo.PNG" class="img-fluid margen2" width="300" height="300" alt="logo">
             </a>
 
             <div class="list-group list-group-flush">
