--- a/lavadomanos.html
+++ b/lavadomanos.html
@@ -54,7 +54,7 @@
         <div class="sidebar-fixed position-fixed">
 
             <a class="">
-                <img src="/img/logo/logo.PNG" class="img-fluid" width="300" height="300" alt="logo">
+                <img src="/img/logo/logo.PNG" class="img-fluid margen2" width="300" height="300" alt="logo">
             </a>
 
             <div class="list-group list-group-flush">
