Login interfaz lista

--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
     <!-- Your custom styles (optional) -->
     <link href="css/style.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/style2.css" rel="stylesheet">
 </head>
 
 <body class="grey lighten-3">
